# nlp_summarization

./: .gitignore  README.md  main.py  pyproject.toml
augmentation/: aeda_augmentation.py  data_augmentation.py
conf/: config.yaml
conf/data/: default.yaml
conf/inference/: default.yaml
conf/model/: model.yaml
conf/training/: default.yaml
ensemble/: ensemble_inference.py  ensemble_inference_best.py
notebooks/: EDA.ipynb  eda_preprocessing.ipynb
src/: check_gpu.py  data.py  inference.py  model.py  preprocess.py  train.py  utils.py
sweep/: solar_api_sweep.py  wandb_sweep.py
